--- a/doc-chat-summarizer-main/index.html
+++ b/doc-chat-summarizer-main/index.html
@@ -28,7 +28,7 @@
     <meta name="twitter:title" content="CG DocAI | Powered by CG Infinity" />
     <meta
       name="twitter:description"
-      content="Smart document intelligence powered by CG Infinity."
+      content="Smart document intelligence powered by CG"
     />
     <meta name="twitter:image" content="//CG-Logo.png" />
 
